# Guerra

./: README.md
Guerra/: .cproject  .gitignore  .project  CMakeLists.txt  Guerra  Makefile  cmake_install.cmake  hello
Guerra/include/Common/: Command.h
Guerra/include/Controllers/: DeckDesignController.h  SaveGamesController.h  TableController.h
Guerra/include/Deck/: DeckModel.h
Guerra/include/JSON/: JSONDeckManagement.h  JSONOperations.h  JSONSavedGame.h
Guerra/include/SavedGames/: SaveGamesModel.h
Guerra/include/States/: DealState.h  DrawState.h  EndGameState.h  GameStatesHandler.h  GameTrigger.h  RoundState.h  StateOfGame.h
Guerra/include/Table/: Table.h
Guerra/include/Table/Players/: Player.h
Guerra/include/View/: LoopManagement.h  View.h
Guerra/include/View/Commands/: CommandFactory.h
Guerra/include/View/Commands/DeckView/: CreateDeck.h  EraseDeck.h
Guerra/include/View/Commands/GameView/: LoadGame.h  NewGame.h  PlayRound.h  SaveGame.h
Guerra/include/View/Commands/StartView/: DeckDesignerStarter.h  GameStarter.h
Guerra/src/: CMakeLists.txt  Guerra.cc  Guerra.cpp
Guerra/src/Card/: CMakeLists.txt  Card.cc  Card.h
Guerra/src/Common/: CMakeLists.txt  Paths.cc  Paths.h  Types.h
Guerra/src/Controllers/: CMakeLists.txt  DeckDesignController.cc  DeckDesignController.h  SaveGamesController.cc  SaveGamesController.h  TableController.cc  TableController.h
Guerra/src/Deck/: CMakeLists.txt  DeckModel.cc  DeckModel.h
Guerra/src/JSON/: CMakeLists.txt  JSONDeckManagement.cc  JSONDeckManagement.h  JSONOperations.cc  JSONOperations.h  JSONSavedGame.cc  JSONSavedGame.h
Guerra/src/SavedGames/: CMakeLists.txt  SaveGameModel.cc  SaveGameModel.h  SaveGamesModel.cc  SaveGamesModel.h
Guerra/src/States/: CMakeLists.txt  DealState.cc  DealState.h  DrawState.cc  DrawState.h  EndGameState.cc  EndGameState.h  GameState.h  GameStatesHandler.cc  GameStatesHandler.h  RoundState.cc  RoundState.h  StateOfGame.h
Guerra/src/Table/: CMakeLists.txt  Table.cc  Table.h
Guerra/src/Table/Players/: CMakeLists.txt  Player.cc  Player.h
Guerra/src/View/: CMakeLists.txt  InterfaceOperations.cc  InterfaceOperations.h  LoopManagement.cc  LoopManagement.h  View.cc  View.h
Guerra/src/View/Commands/: CMakeLists.txt  CommandFactory.cc  CommandFactory.h
Guerra/src/View/Commands/DeckView/: CMakeLists.txt  CreateDeck.cc  CreateDeck.h  EraseDeck.cc  EraseDeck.h
Guerra/src/View/Commands/GameView/: CMakeLists.txt  LoadGame.cc  LoadGame.h  NewGame.cc  NewGame.h  PlayRound.cc  PlayRound.h  SaveGame.cc  SaveGame.h
Guerra/src/View/Commands/StartView/: CMakeLists.txt  DeckDesignerStarter.cc  DeckDesignerStarter.h  GameStarter.cc  GameStarter.h
